--- a/templates/dashboard/user_management.html
+++ b/templates/dashboard/user_management.html
@@ -33,8 +33,8 @@
     <header class="bg-white dark:bg-gray-800 shadow-md fixed w-full z-10">
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
             <a href="{% url 'home' %}" class="flex items-center space-x-2">
-                <img class="w-10 h-10" src="{% static 'images/logo.png' %}" alt="NeuraSoft-IT Logo">
-                <span class="text-xl font-bold">NeuraSoft-IT</span>
+                <img class="w-10 h-10" src="{% static 'images/logo.png' %}" alt="IT Logo">
+                <span class="text-xl font-bold">IT-SOLUTION</span>
             </a>
             <div class="hidden md:flex space-x-8">
                 <a href="{% url 'home' %}" class="nav-link">Home</a>
